# SmartArrayProject-FTXUI

./: CMakeLists.txt
app/: main.cpp
doc/: SMartArray.md
include/: Employee.h  SmartArray.h
src/: Employee.cpp
